--- a/neural_network_pytorch/home/deep-learning-v2-pytorch/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/neural_network_pytorch/home/deep-learning-v2-pytorch/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "\n",
     "# Define a transform to normalize the data\n",
     "transform = transforms.Compose([transforms.ToTensor(),\n",
-    "                                transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "                                transforms.Normalize((0.5,), (0.5,)),\n",
     "                              ])\n",
     "# Download and load the training data\n",
     "trainset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=True, transform=transform)\n",
@@ -103,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2992, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -141,15 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2721, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = model = nn.Sequential(nn.Linear(784, 128),\n",
+    "                              nn.ReLU(),\n",
+    "                              nn.Linear(128, 64),\n",
+    "                              nn.ReLU(),\n",
+    "                              nn.Linear(64, 10),\n",
+    "                              nn.LogSoftmax(dim=1))\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -189,9 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.7074, -0.7389],\n",
+      "        [-0.6263,  0.7205]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2,2, requires_grad=True)\n",
     "print(x)"
@@ -199,9 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5004, 0.5460],\n",
+      "        [0.3923, 0.5191]], grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x**2\n",
     "print(y)"
@@ -216,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PowBackward0 object at 0x12bd50050>\n"
+     ]
+    }
+   ],
    "source": [
     "## grad_fn shows the function that generated this variable\n",
     "print(y.grad_fn)"
@@ -233,9 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.4894, grad_fn=<MeanBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z = y.mean()\n",
     "print(z)"
@@ -250,9 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.grad)"
    ]
@@ -270,9 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.3537, -0.3695],\n",
+      "        [-0.3132,  0.3602]])\n",
+      "tensor([[-0.3537, -0.3695],\n",
+      "        [-0.3132,  0.3602]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z.backward()\n",
     "print(x.grad)\n",
@@ -297,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +393,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before backward pass: \n",
+      " None\n",
+      "After backward pass: \n",
+      " tensor([[-0.0002, -0.0002, -0.0002,  ..., -0.0002, -0.0002, -0.0002],\n",
+      "        [-0.0026, -0.0026, -0.0026,  ..., -0.0026, -0.0026, -0.0026],\n",
+      "        [-0.0005, -0.0005, -0.0005,  ..., -0.0005, -0.0005, -0.0005],\n",
+      "        ...,\n",
+      "        [-0.0002, -0.0002, -0.0002,  ..., -0.0002, -0.0002, -0.0002],\n",
+      "        [ 0.0048,  0.0048,  0.0048,  ...,  0.0048,  0.0048,  0.0048],\n",
+      "        [-0.0003, -0.0003, -0.0003,  ..., -0.0003, -0.0003, -0.0003]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Before backward pass: \\n', model[0].weight.grad)\n",
     "\n",
@@ -341,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,9 +458,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial weights -  Parameter containing:\n",
+      "tensor([[-0.0016, -0.0232, -0.0010,  ...,  0.0200, -0.0121, -0.0002],\n",
+      "        [ 0.0291, -0.0035, -0.0289,  ...,  0.0310,  0.0345, -0.0300],\n",
+      "        [ 0.0078, -0.0301,  0.0016,  ..., -0.0123,  0.0353, -0.0243],\n",
+      "        ...,\n",
+      "        [-0.0324, -0.0320,  0.0343,  ...,  0.0235, -0.0353,  0.0082],\n",
+      "        [-0.0210, -0.0095, -0.0249,  ...,  0.0238,  0.0129,  0.0174],\n",
+      "        [-0.0005, -0.0022,  0.0165,  ...,  0.0153, -0.0023,  0.0036]],\n",
+      "       requires_grad=True)\n",
+      "Gradient - tensor([[ 8.3121e-04,  8.3121e-04,  8.3121e-04,  ...,  8.3121e-04,\n",
+      "          8.3121e-04,  8.3121e-04],\n",
+      "        [-4.0097e-03, -4.0097e-03, -4.0097e-03,  ..., -4.0097e-03,\n",
+      "         -4.0097e-03, -4.0097e-03],\n",
+      "        [ 6.6617e-04,  6.6617e-04,  6.6617e-04,  ...,  6.6617e-04,\n",
+      "          6.6617e-04,  6.6617e-04],\n",
+      "        ...,\n",
+      "        [-1.9820e-05, -1.9820e-05, -1.9820e-05,  ..., -1.9820e-05,\n",
+      "         -1.9820e-05, -1.9820e-05],\n",
+      "        [ 2.0249e-03,  2.0249e-03,  2.0249e-03,  ...,  2.0249e-03,\n",
+      "          2.0249e-03,  2.0249e-03],\n",
+      "        [ 1.0545e-03,  1.0545e-03,  1.0545e-03,  ...,  1.0545e-03,\n",
+      "          1.0545e-03,  1.0545e-03]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Initial weights - ', model[0].weight)\n",
     "\n",
@@ -388,9 +508,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated weights -  Parameter containing:\n",
+      "tensor([[-0.0016, -0.0233, -0.0010,  ...,  0.0200, -0.0121, -0.0002],\n",
+      "        [ 0.0291, -0.0034, -0.0288,  ...,  0.0310,  0.0346, -0.0300],\n",
+      "        [ 0.0078, -0.0301,  0.0016,  ..., -0.0123,  0.0353, -0.0243],\n",
+      "        ...,\n",
+      "        [-0.0324, -0.0320,  0.0343,  ...,  0.0235, -0.0353,  0.0082],\n",
+      "        [-0.0210, -0.0095, -0.0249,  ...,  0.0238,  0.0129,  0.0173],\n",
+      "        [-0.0005, -0.0022,  0.0165,  ...,  0.0153, -0.0023,  0.0036]],\n",
+      "       requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Take an update step and few the new weights\n",
     "optimizer.step()\n",
@@ -410,9 +546,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 1.9833085971600466\n",
+      "Training loss: 0.8933480734637043\n",
+      "Training loss: 0.5359392236195394\n",
+      "Training loss: 0.43901526495846094\n",
+      "Training loss: 0.39489165407571714\n"
+     ]
+    }
+   ],
    "source": [
     "## Your solution here\n",
     "\n",
@@ -434,9 +582,12 @@
     "        images = images.view(images.shape[0], -1)\n",
     "    \n",
     "        # TODO: Training pass\n",
+    "        optimizer.zero_grad()\n",
     "        \n",
-    "        loss = \n",
-    "        \n",
+    "        output = model.forward(images)\n",
+    "        loss = criterion(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        running_loss += loss.item()\n",
     "    else:\n",
     "        print(f\"Training loss: {running_loss/len(trainloader)}\")"
@@ -494,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
